metadata-retriever/metadata/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complaint Process</fullName>
        <description>Complaint Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry Process</fullName>
        <description>Inquiry Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SSI</fullName>
        <description>Service Satisfaction Index</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Best_Contact_Time__c</fullName>
        <label>Best Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Contract_No__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Contract_Number_or_Policy_Number__r.Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp;  Contract_Number_or_Policy_Number__r.Id  &amp; &quot;?isdtp=vw&apos;}&quot;,  Contract_Number_or_Policy_Number__r.Contract_Id__c  , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Class__c</fullName>
        <label>Case Class</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer in regards of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Dealer)</relationshipLabel>
        <relationshipName>Dealer_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Type__c</fullName>
        <label>Case Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>test1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure &amp; Manual Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child/Hoax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events &amp; Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Enquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Contact_FirstName__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Contact_Surname__c</fullName>
        <label>Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Contact_Title__c</fullName>
        <label>Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_or_Policy_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correction__c</fullName>
        <label>Correction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss Recoveries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extenal_Case_ID__c</fullName>
        <externalId>true</externalId>
        <label>Extenal Case ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Created_Date__c</fullName>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOS_Case_Link__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp;  Id  &amp; &quot;?isdtp=vw&apos;}&quot;,   FOS_Case_Number__c   , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOS Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOS_Case_Number__c</fullName>
        <label>FOS Case Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Date__c</fullName>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Required to have feedback flag 
Used in: Page Layouts, Reports 

Modify History 
Modify By: Tony Liu
Modify Reason: Chane Field Name&amp; Label
*/</description>
        <label>Feedback Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agent Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodybuild concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explanation was not given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Veda listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payout/Payment Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repossession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residual/Misunderstand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDCL_Case_Id__c</fullName>
        <label>LDCL Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDCL_ID__c</fullName>
        <description>External ID field for use with data from LDCL</description>
        <externalId>true</externalId>
        <label>LDCL ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Narrative_of_Type__c</fullName>
        <label>Narrative of Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Contracts__c</fullName>
        <label>Number of Contracts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer Asset Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Intention__c</fullName>
        <description>When do you intend to purchase your next vehicle?</description>
        <inlineHelpText>When do you intend to purchase your next vehicle?</inlineHelpText>
        <label>Purchase Intention</label>
        <picklist>
            <picklistValues>
                <fullName>Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12+ months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Due_Date__c</fullName>
        <label>Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Details__c</fullName>
        <label>Solution Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Title__c</fullName>
        <label>Solution Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <label>Staff Member</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_public_solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit to public solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Authority__c</fullName>
        <label>Third Party Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function:
Used in: Page Layouts, Reports 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_you_are_most_interested_in__c</fullName>
        <description>Are you most interested in Vehicle?</description>
        <inlineHelpText>Are you most interested in Vehicle?</inlineHelpText>
        <label>Vehicle you are most interested in?</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito Panel Van</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Web_Category__c</fullName>
        <label>Web Category</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request a Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Models</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Case_Type__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_FOS_Complaints</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>FOS_Case_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.FOS_Complaint</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed FOS Complaints</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_FOS_Complaints</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>FOS_Case_Number__c</columns>
        <columns>CMS_Contract_No__c</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.FOS_Complaint</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open MBFS Complaints</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Inquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Inquiry</value>
        </filters>
        <label>All Open Inquiries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Feedback_from_Dealer</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.MB_Complaint</value>
        </filters>
        <label>Feedback from Dealer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Feedback_required_Inquiry_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Feedback_Required__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Feedback_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Inquiry</value>
        </filters>
        <label>Feedback required Inquiry Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Complaint</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>FOS_Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaint Process</businessProcess>
        <label>FOS Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inquiry</fullName>
        <active>true</active>
        <businessProcess>Inquiry Process</businessProcess>
        <description>Customer Inquiry Case</description>
        <label>Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>MB_Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaint Process</businessProcess>
        <description>MB Complaint includes Import &amp; Export MB</description>
        <label>MB Complaint</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>